--- a/YuriTweetDeleter/App.config
+++ b/YuriTweetDeleter/App.config
@@ -1,6 +1,29 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="YuriTweetDeleter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.1" newVersion="4.1.1.1" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <applicationSettings>
+    <YuriTweetDeleter.Properties.Settings>
+      <setting name="ConsumerKey" serializeAs="String">
+        <value>REClvhX7WZsQV7f9wJspcZj0s</value>
+      </setting>
+      <setting name="ConsumerSecret" serializeAs="String">
+        <value>JUqG0tznaCr4EIvRjKDZpHeVl7g0g7cDqUzLrl4K9AN0N2Y6Vt</value>
+      </setting>
+    </YuriTweetDeleter.Properties.Settings>
+  </applicationSettings>
 </configuration>
