--- a/YuriTweetDeleter/App.config
+++ b/YuriTweetDeleter/App.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="YuriTweetDeleter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="YuriTweetDeleter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
@@ -26,4 +29,14 @@
       </setting>
     </YuriTweetDeleter.Properties.Settings>
   </applicationSettings>
+  <userSettings>
+    <YuriTweetDeleter.Properties.Settings>
+      <setting name="AccessToken" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="AccessTokenSecret" serializeAs="String">
+        <value />
+      </setting>
+    </YuriTweetDeleter.Properties.Settings>
+  </userSettings>
 </configuration>
