--- a/YuriTweetDeleter/packages.config
+++ b/YuriTweetDeleter/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.6.2" targetFramework="net461" />
+  <package id="LumenWorksCsvReader" version="4.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NitoAsyncEx.Context.StrongName" version="1.1.0" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.2" targetFramework="net461" />
