--- a/YuriTweetDeleter/YuriTweetDeleter.csproj
+++ b/YuriTweetDeleter/YuriTweetDeleter.csproj
@@ -22,10 +22,15 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
+    <SupportUrl>https://github.com/fellipec/YuriTweetDeleter</SupportUrl>
+    <TargetCulture>en</TargetCulture>
+    <ProductName>Yuri Tweet Deleter</ProductName>
+    <PublisherName>FellipeC</PublisherName>
     <AutorunEnabled>true</AutorunEnabled>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>0.1.0.0</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
+    <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
